# SurfaceRecognition

./: .gitignore  CMakeLists.txt  README.md  main.cpp  sphere-nodes.xyz  triangulation.cpp  triangulation.h
